# ghi

./: .gitignore  README.md  pypi_publish.ps1  pypi_publish.sh  pyproject.toml
src/ghi/: cli.py
src/git_omit/: cli.py
